# delivery-time-prediction

./: .gitignore  Makefile  README.md  dvc.yaml  main.py  params.yaml  pyproject.toml  requirements.txt  setup.py
.dvc/: config
docs/: Makefile  conf.py  index.rst  make.bat
models/: .gitignore
notebooks/: Food_Delivery_EXP_4_RF_HP_Tuning.ipynb  Food_Delivery_Exp_1_drop_vs_impute.ipynb  Food_Delivery_Exp_2_missing_indicator.ipynb  Food_Delivery_Exp_3Model_Selection.ipynb
src/models/: evaluation.py  registry.py  train.py
