[project]
name = "delivery-time-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cookiecutter>=2.6.0",
    "dagshub>=0.5.10",
    "dvc>=3.60.1",
    "lightgbm>=4.6.0",
    "mlflow==2.18.0",
    "numpy==1.26.4",
    "optuna>=4.4.0",
    "pandas>=2.3.0",
    "scikit-learn>=1.7.0",
    "xgboost>=3.0.2",
]
